--- a/app/views/manual-ECS.html
+++ b/app/views/manual-ECS.html
@@ -91,6 +91,7 @@
 
                 <div class="col-xs-6 col-sm-6">
                   <date-picker
+                    class="form-group"
                     name="startDate"
 	                start-date-model="portalSearch.scheduleDate"
 	                disable-date-range="true"
@@ -148,11 +149,11 @@
                 </div>
                 <div class="col-xs-6 col-sm-6">
                   <date-picker
+                    class="form-group"
                     name="startDate"
 	                start-date-model="eposSearch.scheduleDate"
 	                disable-date-range="true"
 	                is-search-field="true"
-	                disable-start-date="readOnly"
 	                label-from="Schedule Date">
 	              </date-picker>
                 </div>
@@ -316,6 +317,7 @@
               </div>
               <div class="col-xs-6 col-sm-3">
                 <date-picker
+                  class="form-group"
                   name="startDate"
                   start-date-model="allInstancesSearch.portalScheduleDate"
                   disable-date-range="true"
@@ -356,6 +358,7 @@
               </div>
               <div class="col-xs-6 col-sm-3">
                 <date-picker
+                  class="form-group"
                   name="startDate"
                   start-date-model="allInstancesSearch.eposScheduleDate"
                   disable-date-range="true"
