--- a/app/views/item-create.html
+++ b/app/views/item-create.html
@@ -199,14 +199,14 @@
               <div class="form-group">
                 <label>Item Substitutions</label>
                 <ui-select style="min-height: 31px; margin-bottom: 15px;"
-                           ng-if="!itemsAreBeingLoaded"
+                           ng-if="uiSelectTemplateReady"
                            multiple
                            ng-model="formData.substitutions"
                            theme="bootstrap"
                            remove-selected="false"
                            ng-disabled="isDisabled() || !areDatesSelected()"
                 >
-                  <ui-select-match placeholder="Start typing to find an item Substitutions" ui-lock-choice="isDisabled()">{{ $item.itemName }}
+                  <ui-select-match placeholder="Item Substitutions" ui-lock-choice="isDisabled()">{{ $item.itemName }}
                   </ui-select-match>
                   <ui-select-choices
                     repeat="substitution in substitutions | filter: $select.search | orderBy:'itemName'">
@@ -214,24 +214,24 @@
                   </ui-select-choices>
                 </ui-select>
 
-                <small ng-if="uiSelectTemplateReady" ng-hide="areDatesSelected()" class="form-text text-muted" >
-                  <span  class="alert alert-info" style="padding: 3px;"><i class="fa fa-exclamation-circle"></i> Substitutions will be loaded when Effective date range is selected.</span>
-                </small>
-                <small ng-if="uiSelectTemplateReady" ng-if="areDatesSelected() && substitutionsForDateRangeAreEmpty" class="form-text text-muted">
-                  <span  class="alert alert-warning" style="padding: 3px;"><i class="fa fa-exclamation-circle"></i> There are no active substitutions for selected date range.</span>
-                </small>
+                <!--<small ng-if="!areDatesSelected() && uiSelectTemplateReady && !isDisabled()" class="form-text text-muted" >-->
+                  <!--<span  class="alert alert-info" style="padding: 3px;"><i class="fa fa-exclamation-circle"></i> Substitutions will be loaded when Effective date range is selected.</span>-->
+                <!--</small>-->
+                <!--<small ng-if="areDatesSelected() && substitutionsForDateRangeAreEmpty" class="form-text text-muted">-->
+                  <!--<span  class="alert alert-warning" style="padding: 3px;"><i class="fa fa-exclamation-circle"></i> There are no active substitutions for selected date range.</span>-->
+                <!--</small>-->
               </div>
 
               <div class="form-group">
                 <label>Item Recommendations</label>
                 <ui-select
-                  ng-if="uiSelectTemplateReady && !itemsAreBeingLoaded"
+                  ng-if="uiSelectTemplateReady"
                   multiple
                   ng-model="formData.recommendations"
                   theme="bootstrap"
                   style="min-height: 31px; margin-bottom: 15px;"
                 >
-                  <ui-select-match placeholder="Start typing to find an item Recommendations" ui-lock-choice="isDisabled()">{{ $item.itemName }}
+                  <ui-select-match placeholder="Item Recommendations" ui-lock-choice="isDisabled()">{{ $item.itemName }}
                   </ui-select-match>
                   <ui-select-choices
                     repeat="recommendation in recommendations | filter: $select.search | orderBy:'itemName'">
@@ -239,12 +239,12 @@
                   </ui-select-choices>
                 </ui-select>
 
-                <small ng-if="uiSelectTemplateReady" ng-hide="areDatesSelected()" class="form-text text-muted">
-                  <span  class="alert alert-info" style="padding: 3px;"><i class="fa fa-exclamation-circle"></i> Recommendations will be loaded when Effective date range is selected.</span>
-                </small>
-                <small ng-if="uiSelectTemplateReady" ng-if="areDatesSelected() && recommendationsForDateRangeAreEmpty" class="form-text text-muted">
-                  <span  class="alert alert-warning" style="padding: 3px;"><i class="fa fa-exclamation-circle"></i> There are no active recommendations for selected date range.</span>
-                </small>
+                <!--<small ng-if="!areDatesSelected() && uiSelectTemplateReady && !isDisabled()" class="form-text text-muted">-->
+                  <!--<span  class="alert alert-info" style="padding: 3px;"><i class="fa fa-exclamation-circle"></i> Recommendations will be loaded when Effective date range is selected.</span>-->
+                <!--</small>-->
+                <!--<small ng-if="areDatesSelected() && recommendationsForDateRangeAreEmpty && !isDisabled()" class="form-text text-muted">-->
+                  <!--<span  class="alert alert-warning" style="padding: 3px;"><i class="fa fa-exclamation-circle"></i> There are no active recommendations for selected date range.</span>-->
+                <!--</small>-->
               </div>
 
             </fieldset>
