--- a/app/views/company-reasoncodes-list.html
+++ b/app/views/company-reasoncodes-list.html
@@ -24,7 +24,7 @@
 			<div class="col-xs-12 col-sm-6 col-md-4">
 			  <div class="form-group">
                 <label for="companyReasonCodeName">Company Reason Code</label>
-                <input ng-model="search.companyReasonCodeName" type="text" class="form-control" id="companyReasonCodeName" placeholder="Company Reason Code">
+                <input ng-model="search.companyReasonCodeName" type="text" class="form-control" id="searchCompanyReasonCodeName" placeholder="Company Reason Code">
               </div>
 			</div>
 			<div class="col-xs-12 col-sm-6 col-md-8">
@@ -43,7 +43,7 @@
 			<div class="col-xs-12 col-sm-6 col-md-4">
 				<div class="form-group">
 					<label for="reasonType">Reason Type</label>
-					<select name="reasonType" id="companyReasonTypeId" class="form-control"
+					<select name="reasonType" id="searchCompanyReasonTypeId" class="form-control"
                       ng-options="reasonType.id as reasonType.reasonTypeName for reasonType in reasonTypes"
                       ng-model="search.companyReasonTypeId">
                 		<option value="">Please Select Reason Type</option>
@@ -93,7 +93,7 @@
 				        name="EffectiveEndDate"
 						label="Effective End Date"
 						disable="readOnly || shouldDisableEndDate"
-						ng-model="rule.endDate"
+						ng-model="reason.endDate"
 						end-current-effective="!viewEditItem"
 						custom-effective="true"
 						custom-date="reason.endDate"
@@ -130,6 +130,7 @@
     </div>  
     
     <br>
+    <form name="companyReasonEditForm" ng-submit="editCompanyReasonCode()">
     <div class="table-responsive">
       <table infinite-scroll="loadCompanyReasonCodes()" class="table table-bordered table-hover ng-scope">
         <thead>
@@ -139,27 +140,85 @@
           <th>Start Date</th>
           <th>End Date</th>
           <th>Is Default</th>
-          <th>Actions</th>
+          <th ng-show="isCRUD">Actions</th>
         </tr>
         </thead>
         <tbody>
         <tr class="ng-scope" ng-repeat="reason in companyReasonCodes">
-          <td>{{ reason.companyReasonCodeName }}</td>
-          <td>{{ reason.reasonTypeName }}</td>
-          <td>{{ reason.startDate}}</td>
-          <td>{{ reason.endDate}}</td>
-          <td>{{ reason.isDefault}}</td>
           <td>
-            <button class="btn btn-info btn-xs" ng-click="redirectToCompanyReason(reason.id, 'view')" tabindex="0">
-              <i class="fa fa-file"></i>
+          	<span ng-hide="isSelectedToEdit(reason) && isUpdatable(reason)">{{ reason.companyReasonCodeName }}</span>
+          	<span ng-show="isSelectedToEdit(reason) && isUpdatable(reason)">
+          	    <input ng-model="recordToEdit.companyReasonCodeName" type="text" class="form-control" 
+          	    	required="true" id="editCompanyReasonCodeName" 
+          	    	placeholder="Company Reason Code">
+          	</span>
+          </td>	
+          <td>
+          	<span ng-hide="isSelectedToEdit(reason) && isUpdatable(reason)">{{ reason.reasonTypeName }}</span>
+          	<span ng-show="isSelectedToEdit(reason) && isUpdatable(reason)">
+          		<select name="reasonType" id="editCompanyReasonTypeId" class="form-control" required="true"
+                      ng-options="reasonType.id as reasonType.reasonTypeName for reasonType in reasonTypes"
+                      ng-model="recordToEdit.companyReasonTypeId">
+                		<option value="">Please Select Reason Type</option>
+              	</select>
+          	</span>
+          </td>	
+          <td>
+          	<span ng-hide="isSelectedToEdit(reason) && isUpdatable(reason)">{{ reason.startDate }}</span>
+          	<span ng-show="isSelectedToEdit(reason) && isUpdatable(reason)">
+          		<date-picker-field
+              		name="editStartDate"
+              		class="form-group"
+              		form="companyReasonEditForm"
+              		ng-model="recordToEdit.startDate"
+              		ng-show="isSelectedToEdit(reason) && isUpdatable(reason)">
+            	</date-picker-field>
+          	</span>
+          </td>
+          <td>
+          	<span ng-hide="isSelectedToEdit(reason) && isCompanyReasonCodeEditable(reason)">{{ reason.endDate }}</span>
+          	<span ng-show="isSelectedToEdit(reason) && isCompanyReasonCodeEditable(reason)">
+          		<date-picker-field
+              		name="editEndDate"
+              		class="form-group"
+              		form="companyReasonEditForm"
+              		min-date="minDate"
+              		ng-model="recordToEdit.endDate"
+              		ng-show="isSelectedToEdit(reason) && isCompanyReasonCodeEditable(reason)">
+            	</date-picker-field>
+          	</span>
+          </td>
+          <td>
+          	<span ng-hide="isSelectedToEdit(reason) && isUpdatable(reason)">{{ reason.isDefault }}</span>
+          	<span ng-show="isSelectedToEdit(reason) && isUpdatable(reason)">
+          		<input ng-model="recordToEdit.isDefault" id="isDefault" type="checkbox"/>
+          	</span>
+          </td>
+          <td ng-show="isCRUD">
+            <button type="submit"
+                    class="btn btn-success btn-xs"
+                    tabindex="1"
+                    ng-show="isSelectedToEdit(reason)">
+              <i class="fa fa-check"></i>
             </button>
-            <button class="btn btn-primary btn-xs" ng-click="redirectToCompanyReason(reason.id, 'edit')" ng-show="isCRUD && isCompanyReasonCodeEditable(reason)" tabindex="0">
+            <button type="button"
+                    class="btn btn-default btn-xs"
+                    tabindex="2"
+                    ng-show="isSelectedToEdit(reason)"
+                    ng-click="cancelEdit()">
+              <i class="fa fa-times"></i>
+            </button>
+            <button type="button"
+                    class="btn btn-primary btn-xs"
+                    tabindex="3"
+                    ng-show="isCompanyReasonCodeEditable(reason) && !inEditMode"
+                    ng-click="selectToEdit(reason)">
               <i class="fa fa-pencil"></i>
             </button>
             <button class="btn btn-danger btn-xs"
                     ng-click="deleteRecordDialog(companyReasonCodes[$index], ['companyReasonCodeName', 'reasonTypeName', 'startDate', 'endDate'])"
-                    tabindex="0"
-                    ng-show="isCRUD && showDeleteButton(reason.startDate)">
+                    tabindex="4"
+                    ng-show="showDeleteButton(reason.startDate) && !inEditMode">
               <i class="fa fa-trash"></i>
             </button>
           </td>
@@ -167,6 +226,7 @@
         </tbody>
       </table>
     </div>
+    </form>
     <alert ng-show="!loadingBarVisible && companyReasonCodes.length == 0" type="info">
       <span class="fa fa-flag"></span> Your search returned no results.
     </alert>
