--- a/app/views/priceupdater-create.html
+++ b/app/views/priceupdater-create.html
@@ -75,7 +75,7 @@
 					<div class="col-xs-12 col-sm-4">
 						<label class="invisible">Checkbox</label>
                 		<div class="form-group">
-							<input ng-model="rule.percentage" id="percentage" type="checkbox"/>
+							<input ng-model="rule.percentage" ng-disabled="isDisabled()" id="percentage" type="checkbox"/>
                 			<label>Is Percentage</label>
 						</div>
 					</div>
@@ -99,7 +99,7 @@
 						<div class="form-group">
                 			<label for="percentValue">Percentage Value*</label>
                 			<input ng-model="rule.percentValue" type="text" class="form-control" name = "percentageValue" id="percentValue" ng-required="rule.percentage"
-                				placeholder="10%" ng-pattern="regexp.percentage">
+                				placeholder="10%" ng-disabled="isDisabled()" ng-pattern="regexp.percentage">
               			</div>
 					</div>
 				</div>	
