--- a/app/views/company-receipt-list.html
+++ b/app/views/company-receipt-list.html
@@ -15,12 +15,12 @@
   </div>
   <div class="survey-data-list">
     <div class="panel panel-default no-transition" id="search-collapse">
-      <form name="surveySearchForm" ng-submit="searchSurveyCatalogData()">
+      <form name="surveySearchForm" ng-submit="searchCompanyReceipts()">
         <div class="panel-body">
           <div class="row">
             <div class="col-xs-12 col-sm-6 col-md-4">
               <div class="form-group">
-                <label for="surveyCatalogName">Survey Catalog Name</label>
+                <label for="surveyCatalogName">Company Receipt Type</label>
                 <input ng-model="search.catalogName" type="text" class="form-control" id="surveyCatalogName" placeholder="Survey Catalog Name">
               </div>
             </div>
@@ -45,31 +45,33 @@
     </div>
     <br>
     <div class="table-responsive">
-      <table infinite-scroll="loadSurveys()" class="table table-bordered table-hover ng-scope">
+      <table infinite-scroll="loadCompanyReceipts()" class="table table-bordered table-hover ng-scope">
         <thead>
         <tr>
-          <th>Survey Catalog Name</th>
+          <th>Receipt Type</th>
+          <th>Logo URL</th>
           <th>Start Date</th>
           <th>End Date</th>
           <th>Actions</th>
         </tr>
         </thead>
         <tbody>
-        <tr class="ng-scope" ng-repeat="surveyCatalog in surveyCatalogs">
-          <td>{{ surveyCatalog.catalogName }}</td>
-          <td>{{ surveyCatalog.startDate}}</td>
-          <td>{{ surveyCatalog.endDate}}</td>
+        <tr class="ng-scope" ng-repeat="companyReceipt in companyReceipts">
+          <td>{{ companyReceipt.receiptType }}</td>
+          <td>{{ companyReceipt.logoUrl }}</td>
+          <td>{{ companyReceipt.startDate}}</td>
+          <td>{{ companyReceipt.endDate}}</td>
           <td>
-            <button class="btn btn-info btn-xs" ng-click="redirectToSurveyCatalog(surveyCatalog.id, 'view')" tabindex="0">
+            <button class="btn btn-info btn-xs" ng-click="redirectToCompanyReceipt(companyReceipt.id, 'view')" tabindex="0">
               <i class="fa fa-file"></i>
             </button>
-            <button class="btn btn-primary btn-xs" ng-click="redirectToSurveyCatalog(surveyCatalog.id, 'edit')" ng-show="isCRUD && isSurveyCatalogEditable(surveyCatalog)" tabindex="0">
+            <button class="btn btn-primary btn-xs" ng-click="redirectToCompanyReceipt(companyReceipt.id, 'edit')" ng-show="isCRUD && isCompanyReceiptEditable(companyReceipt)" tabindex="0">
               <i class="fa fa-pencil"></i>
             </button>
             <button class="btn btn-danger btn-xs"
-                    ng-click="deleteRecordDialog(surveyCatalogs[$index], ['surveyCatalogName', 'startDate', 'endDate'])"
+                    ng-click="deleteRecordDialog(companyReceipt[$index], ['receiptType', 'startDate', 'endDate'])"
                     tabindex="0"
-                    ng-show="isCRUD && showDeleteButton(surveyCatalog.startDate)">
+                    ng-show="isCRUD && showDeleteButton(companyReceipt.startDate)">
               <i class="fa fa-trash"></i>
             </button>
           </td>
@@ -77,10 +79,10 @@
         </tbody>
       </table>
     </div>
-    <alert ng-show="!loadingBarVisible && surveyCatalogs.length == 0" type="info">
+    <alert ng-show="!loadingBarVisible && companyReceipt.length == 0" type="info">
       <span class="fa fa-flag"></span> Your search returned no results.
     </alert>
-    <p ng-if="surveyCatalogs.length > 0" class="record-count small text-center">Showing {{surveyCatalogs.length}} records</p>
+    <p ng-if="companyReceipt.length > 0" class="record-count small text-center">Showing {{companyReceipt.length}} records</p>
     <p class="loading-more alert alert-info text-center"><i class="fa fa-spin fa-circle-o-notch"></i> Loading more...</p>
   </div>
 </div>
