TSVPORTAL-11319 - Working on company receipts create view

--- a/app/views/company-receipt-list.html
+++ b/app/views/company-receipt-list.html
@@ -20,7 +20,7 @@
           <div class="row">
             <div class="col-xs-12 col-sm-6 col-md-4">
               <div class="form-group">
-                <label for="surveyCatalogName">Company Receipt Type</label>
+                <label for="surveyCatalogName">Receipt Type</label>
                 <input ng-model="search.catalogName" type="text" class="form-control" id="surveyCatalogName" placeholder="Survey Catalog Name">
               </div>
             </div>
