--- a/app/views/company-receipt-list.html
+++ b/app/views/company-receipt-list.html
@@ -1,7 +1,7 @@
 <div class="module-container">
   <div class="row item-list-row">
     <div class="col-xs-4">
-      <h2 class="view-name">{{ viewName }}</h2>
+      <h2 class="view-name">Company Receipts</h2>
     </div>
     <div class="col-xs-8 text-right">
       <a href="#/company-receipt-create" ng-show="isCRUD" class="btn btn-primary">+ <span class="hidden-xs">Create Company Receipt</span></a>
